fix: improved alignment of topic links in card with image (#866)

--- a/src/theme/ItaliaTheme/Blocks/_cardWithImage.scss
+++ b/src/theme/ItaliaTheme/Blocks/_cardWithImage.scss
@@ -13,6 +13,10 @@
       display: inline-block;
     }
 
+    .card-with-image-additional-links a {
+      width: auto;
+    }
+
     .img-responsive-wrapper {
       width: inherit;
 
